--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>	Movie App </title>
-	<% include head %>
-</head>
-<body>
+  <head>
+    <title>Movie App</title>
+    <% include head %>
+  </head>
+  <body>
+    <% include navbar %>
 
-	<% include navbar %>
-
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1></h1>
-			</div>
-			<div class="col-sm-12">
-				
-				
-			</div>
-		</div>
-	</div>
-</body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h1>👻 Now Playing 👻</h1>
+        </div>
+        <div class="col-sm-12">
+          <!-- we have that array of movies called parsedData -->
+          <% parsedData.forEach((movie)=>{ %>
+          <div class="col-md-3 col-sm-4 poster">
+            <img src="<%= imageBaseUrl + movie.poster_path %>" alt="<%= movie.title %>" />
+            <!-- <%= movie.title %> -->
+          </div>
+          <% }) %>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
